changed demo for RMS segmentation application

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "/vue.config.js"
   ],
   "dependencies": {
+    "@girder/components": "^2.2.10",
     "@mdi/font": "^5.3.45",
     "axios": "^0.19.2",
     "js-cookie": "^2.2.0",
